[package]
name = "todo"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rocket = "0.5.0-rc.2"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"
libsqlite3-sys = { version = "0.18", features = ["bundled"]}

[dev-dependencies]
parking_lot = "0.12"
rand = "0.8"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars", "tera"]
